<resources>
    !--Generic Strings
    <string name="alert_logout_title">Logout</string>
    <string name="alert_logout_message">Are you sure you want to logout?</string>
    <string name="alert_choose_title">Return to Choose Configuration</string>
    <string name="alert_choose_message">Change device type?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_cancel">Cancel</string>

    !--Login Strings
    <string name="app_name">JDSecuritySolutions</string>
    <string name="login_title">LoginAndRegister</string>
    <string name="UserField">Username:</string>
    <string name="PassField">Password:</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Forgot">Forgot your password?</string>
    <string name="UserHint">Your Username</string>
    <string name="PassHint">Your Password</string>
    <string name="LoginFail">Incorrect Username/Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="alert_title">Exit Application</string>
    <string name="alert_message">Are you sure you want to leave the app?</string>

    !--Register Strings
    <string name="RegInfo">Registration Information</string>
    <string name="SubmitInfo">Submit</string>
    <string name="NameField">Full Name:</string>
    <string name="NameHint">Joe Smith</string>
    <string name="ConfirmPassField">Confirm Password:</string>
    <string name="EmailField">Email Address:</string>
    <string name="EmailHint">123@gmail.com</string>
    <string name="usernameErrorMsg">Username already taken.</string>
    <string name="passwordErrorMsg">Password must be 8 or more characters.</string>
    <string name="confirmPasswordErrorMsg">Passwords must match.</string>
    <string name="nameErrorMsg">Name must be 2 or more characters.</string>
    <string name="emailErrorMsg">Improper email format.</string>

    !--ForgotPassword Strings
    <string name="Send">Send</string>
    <string name="NoEmailFound">Email Address Does Not Exist.</string>
    <string name="WrongEmailFormat">Please use a proper email format.</string>

    !--Bottom Navigation Strings
    <string name="Settings">Settings</string>
    <string name="Recorder">Recorder</string>
    <string name="Viewer">Viewer</string>
    <string name="Home">Home</string>

    !--Settings Strings
    <string name="Logout">Logout</string>


    !--Permissions
    <string name="FailedPermission">FAILED GAINING PERMISSIONS</string>

    !--ChooseConfig Strings
    <string name="ViewerLabel">Use This Device as a Viewer</string>
    <string name="CameraLabel">Start Recording from Device</string>

    !--CameraDevice Strings
    <string name="RoomNameLabel">Room Name:</string>
    <string name="RoomNameHint">Living Room</string>
    <string name="DefaultRoom">Default Room</string>
    <string name="RecordFail">Failed to Start Recorder</string>

    !--ViewerMenu Strings
    <string name="ViewerMenuTitle">Cameras</string>

    !--ViewerDevice Strings
    <string name="LiveLabel">LIVE</string>
    <string name="NoMoreVideos">You have reached the end of your recording.</string>\

    !--Notification Strings
    <string name="channel_id">Primary Notification Channel</string>
    <string name="notif_start">Device is recording.</string>
    <string name="notif_end">Device has finished recording.</string>
    <string name="channel_name">JD Security</string>
    <string name="channel_description">Recording Status</string>

</resources>
