<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ViewerDevice">

    <item
        style="@style/AppTheme"
        android:id="@+id/menu_home"
        android:title="@string/Home"
        android:icon="@drawable/home"
        app:showAsAction="always"></item>

    <item
        style="@style/AppTheme"
        android:id="@+id/menu_recorder"
        android:title="@string/Recorder"
        android:icon="@drawable/camera_small"
        app:showAsAction="always"></item>

    <item
        style="@style/AppTheme"
        android:id="@+id/menu_viewer"
        android:title="@string/Viewer"
        android:icon="@drawable/tv_small"
        app:showAsAction="always"></item>

    <item
        style="@style/AppTheme"
        android:id="@+id/menu_settings"
        android:title="@string/Settings"
        android:icon="@drawable/gear_small"
        app:showAsAction="always"></item>

</menu>