<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jacob.daniel.jdsecuritysolutions.Registration"
    android:background="@color/mainBackground">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:src="@drawable/jd_logo_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/regInfoLabel"
        style="@style/TitleText"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoView"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollRegister"
        android:layout_width="fill_parent"
        android:layout_height="167dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regInfoLabel"
        app:layout_constraintVertical_bias="0.0">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:columnCount="2"
            android:orientation="vertical"
            android:rowCount="7">

            <TextView />

            <TextView
                android:id="@+id/fullName"
                style="@style/LabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="15dp"
                android:text="@string/NameField" />

            <TextView
                android:id="@+id/userName"
                style="@style/LabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="15dp"
                android:text="@string/UserField" />

            <TextView
                android:id="@+id/password"
                style="@style/LabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="15dp"
                android:text="@string/PassField" />

            <TextView
                android:id="@+id/confirmPassword"
                style="@style/LabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="15dp"
                android:text="@string/ConfirmPassField" />


            <TextView
                android:id="@+id/email"
                style="@style/LabelTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="15dp"
                android:text="@string/EmailField" />

            <TextView />

            <TextView />

            <EditText
                android:id="@+id/fullNameInput"
                style="@style/EditTextStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom"
                android:hint="@string/NameHint"
                android:inputType="text" />

            <EditText
                android:id="@+id/userNameInput"
                style="@style/EditTextStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/UserHint"
                android:inputType="text" />

            <EditText
                android:id="@+id/passwordInput"
                style="@style/EditTextStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/PassHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPasswordInput"
                style="@style/EditTextStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/PassHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/emailInput"
                style="@style/EditTextStyle"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/EmailHint"
                android:inputType="text" />

            <TextView />

        </GridLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitInfo"
        android:text="@string/SubmitInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regInfoLabel"
        app:layout_constraintVertical_bias="0.466" />

</androidx.constraintlayout.widget.ConstraintLayout>