<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jacob.daniel.jdsecuritysolutions.LoginAndRegister"
    android:background="@color/mainBackground">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/jd_logo_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/usernameView"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserField"
        app:layout_constraintBottom_toBottomOf="@+id/addUser"
        app:layout_constraintEnd_toStartOf="@+id/addUser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addUser" />

    <TextView
        android:id="@+id/passwordView"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PassField"
        app:layout_constraintBottom_toBottomOf="@+id/addPass"
        app:layout_constraintEnd_toStartOf="@+id/addPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addPass" />

    <EditText
        android:id="@+id/addUser"
        style="@style/EditTextStyle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/UserHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView"
        app:layout_constraintVertical_bias="0.21" />

    <EditText
        android:id="@+id/addPass"
        style="@style/EditTextStyle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/PassHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUser"
        app:layout_constraintVertical_bias="0.17" />

    <CheckBox
        android:id="@+id/remember"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="rememberMe"
        android:text="@string/RememberMe"
        app:layout_constraintBottom_toBottomOf="@+id/addPass"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintStart_toEndOf="@+id/addPass"
        app:layout_constraintTop_toTopOf="@+id/addUser" />

    <TextView
        android:id="@+id/forgotPass"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="forgotPassword"
        android:text="@string/Forgot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="authenticate"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="@+id/remember"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/remember" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginButton" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forgotPass"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>