<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jacob.daniel.jdsecuritysolutions.ForgotPassword"
    android:background="@color/mainBackground">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/jd_logo_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email"
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/emailInput"
        style="@style/EditTextStyle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/EmailHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="recoverPassword"
        android:text="@string/Send"
        app:layout_constraintBottom_toBottomOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="@+id/emailInput" />

</androidx.constraintlayout.widget.ConstraintLayout>